objects/Scheduable_Process_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Last_Execution_Time__c</fullName>
        <label>Last Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parameter_1__c</fullName>
        <label>Parameter 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter_2__c</fullName>
        <label>Parameter 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Scheduable Process Configuration</label>
</CustomObject>